セクション

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>ヘッダー！</header>
     <h1>ありがとう！！さようなら</h1>
     <h2>hello</h2>
-
+    <section>第一セクショ</section>
     
 </body>
 </html>
